style/style.css
body {
    font-family: arial,sans-serif;
    text-align: center;
}

a {
    text-decoration: none;
    color: rgba(0,0,0,.54);
}
a:hover {
    text-decoration: underline;
}
li {
    list-style-type: none;
    margin: 0px 20px 0px 0px;

}
/* Header section */
header ul {

    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}


header li {
    margin-right: 15px;
    font-size: 13px;
    
}
.header {
    color: #222;
}
#profile_pic {
    margin-top: -5px;
}

/* Logo section */
#google_logo {
    display: flex;
    justify-content: center;
    align-content: center;
    margin-bottom: 0;
    margin-top: 200px;
}

/* Search box section */
#search {
    display: block;
    margin: 0 auto;   
}

#mic_icon {
    position: absolute;
    padding: 25px 55px 40px 515px;
}

#searchbox {
    position: relative;
    width: 550px;
    height: 40px;
    margin-top: 20px;
    margin-bottom: 20px;
    border-radius: 20px;
    border:none;
    color: rgba(0,0,0,.87);
    box-shadow: 0 0 2px rgb(114, 111, 111);
    /* This is how to put img inside Searchbox */
    background: transparent url(/image/search_black.png)left no-repeat;
    padding-left: 20px;
}
#searchbox:hover {
    box-shadow: 0 0 5px rgb(114, 111, 111);

}
/* Google search button */
#button1 {
    margin-right: 10px;
}
#button1, #button2 {
    background-color: #f8f9fa;
    color: #3c4043;
    font-size: 14px;
    border: none;   
    border-radius: 7%;
    text-decoration: none;
    padding: 10px 10px;
    cursor: pointer;


}
button:hover {
    box-shadow: 0 0 2px #222;
}

/* Offered language section */
#offered_language {
    display: flex;
    justify-content: center;
    margin-top: 10px;
    margin-bottom: 320px;
    font-size: small;
    color: #222;
}

/* Footer section */
#footer1 {
    background-color:#f2f2f2;
    padding: 10px;
    margin-bottom: 0;
    border-bottom: 1px solid #dadce0;
    display: flex;
    justify-content: flex-start;
}
#footer_bottom {
    background-color: #f2f2f2;
    margin-bottom: 0;
    display: flex;
    justify-content: space-between;

} 
/* padding from here solved left spacing beside "About" */
#footer_bottom_left_ul {
    display: flex;
    flex-direction: row;
    padding: 0px 0px 0px 10px;
    padding-bottom: 0;

}

#footer_bottom_right_ul {
    display: flex;
    flex-direction: row;
    padding-bottom: 0;
}

footer {
    color: rgba(0,0,0,.54);
    font-size: 15px;
    margin-bottom: 0;
}

